hard-gists/27737c5f2de213216360/run.log
=== Docker Run Log for 27737c5f2de213216360 ===
Started at: Mi 29. Okt 13:14:29 CET 2025

[2025-10-29 13:14:29] START: Running container for 27737c5f2de213216360
[2025-10-29 13:14:30] SUCCESS: Container 93af7ecf45f6d898b4f721c019225fa247dc70c10098031d5f405b81bdb88afa started for 27737c5f2de213216360
=== Container logs for 27737c5f2de213216360 ===
  File "/snippet.py", line 79
    print result, 'proctime : %d'%es
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 27737c5f2de213216360 ===
[2025-10-29 13:14:32] INFO: Container 93af7ecf45f6d898b4f721c019225fa247dc70c10098031d5f405b81bdb88afa has stopped
